# oxymoron

./: .ghci  .gitignore  LICENSE  README.md  leqSymbol.txt  oxymoron.cabal  scratch.hs
src/: Oxymoron.hs
src/Oxymoron/: Class.hs  Description.hs  Environment.hs  Regions.hs  Scene.hs
src/Oxymoron/Description/: Attribute.hs  FragmentShader.hs  Image.hs  Material.hs  Mesh.hs  Program.hs  Renderable.hs  Shader.hs  Symbol.hs  Uniform.hs  Varying.hs  VertexShader.hs
src/Oxymoron/Environment/: Image.hs  Internal.hs  Program.hs  Shader.hs
src/Oxymoron/Regions/: Image.hs  Program.hs  Resource.hs  Shader.hs
src/Oxymoron/Resource/: Program.hs
src/Oxymoron/Scene/: Attribute.hs  Classes.hs  ConstraintStuff.hs  Core.hs  Environment.hs  FragmentShader.hs  Image.hs  Material.hs  Mesh.hs  Program.hs  Renderable.hs  Rendering.hs  Resource.hs  Shader.hs  TypeFunctions.hs  Uniform.hs  Varying.hs  VertexShader.hs
src/Oxymoron/TypeLevel/: AssociativeArray.hs  Nat.hs  Symbol.hs
tests/: Main.hs
